refactor: changed style of application

--- a/TeamSphere-frontend/src/components/forms/styles.css
+++ b/TeamSphere-frontend/src/components/forms/styles.css
@@ -8,10 +8,11 @@ th, td {
     padding: 0.8rem;
     border: 1px solid #ddd;
     text-align: left;
+    color: #ffffff;
 }
 
 th {
-    background-color: #f4f4f4;
+    background-color: #444;
 }
 
 button {
