--- a/TeamSphere-frontend/src/components/forms/navigation/Navigation.css
+++ b/TeamSphere-frontend/src/components/forms/navigation/Navigation.css
@@ -1,32 +1,45 @@
+body, html {
+    background-color: #1D0E2B;
+    margin: 0;
+    padding: 0;
+}
+
+h1 {
+    color: #FFFFFF;
+}
+
 .main-form {
     text-align: center;
     padding: 20px;
+    position: relative;
+}
+
+.logo {
+    position: fixed;
+    visibility: visible;
+    top: 1px;
+    left: 42%;
+    width: 250px;
+    height: 250px;
 }
 
 .nav-links {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 10px;
     margin-top: 20px;
+    justify-content: center;
 }
 
 .nav-link {
-    padding: 10px;
-    border: 1px solid #ccc;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    background-color: white;
-    color: black;
+    width: 100%;
     font-size: 16px;
     text-align: center;
-    text-decoration: none;
-    border-radius: 4px;
+    border-radius: 6px;
+    transition: background-color 0.3s ease;
 }
 
 .nav-link:hover {
-    background-color: #f0f0f0;
-}
-
-.nav-link:focus {
-    outline: 2px solid #007bff;
+    background-color: var(--primary-color);
+    color: white;
 }
